--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,12 @@ vignettes/*.pdf
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
+.Rproj.user
+
+*.png
+
+*.pdf
+
+*.pdf
+
+graphics/3x Framework 1.pdf
